# mailz

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  TODO  _err.c  _err.h  address.c  address.h  argv.h  cache.c  cache.h  charset.c  charset.h  command.c  command.h  command.l  command.y  commands.c  commands.h  conf.h  config.h  config.h.in  configure  content-proc.c  content-proc.h  content-type.c  content-type.h  content.c  content.h  date.c  date.h  edit.h  encoding.c  encoding.h  err-fork.c  err-fork.h  errstr.c  errstr.h  (+87 more)
compat/: base64.c  err.h  errc.c  fcntl.h  freezero.c  getdtablecount.c  imsg.h  resolv.h  scan_scaled.c  stdlib.h  string.h  time.h  unistd.h  util.h  verrc.c  warnc.c
compat/sys/: bsd-tree.h  queue.h  time.h  tree.h
lesswrapper/: Makefile  lesswrapper.c
maildir-extract/: Makefile
maildir-read/: Makefile
maildir-read-letter/: Makefile
mailz/: Makefile
mk/: content  maildir-extract  maildir-read-letter  maildir-read-letter.mk  maildir-read.mk  mailz  mailz.mk  man  regress
regress/: Makefile  charset.c  charset.h  command.c  command.h  content-proc.c  content-proc.h  encoding.c  encoding.h  header.c  header.h  mailbox.c  mailbox.h  maildir.c  maildir.h  multipart.c  multipart.h  printable.c  printable.h  regress.c
regress/letters/: letter_binary_1  letter_binary_2  letter_binary_3  letter_binary_4  letter_error_1  letter_error_2  letter_error_3  letter_in_2  letter_in_3  letter_in_4  letter_out_2  letter_out_3  letter_out_4  reply_in_1  reply_in_2  reply_in_3  reply_out_1  reply_out_2  reply_out_3  summary_1  summary_2
regress/tests/: letter  mailz.conf
regress/tests/inbox/cur/: 1:2,
tests/: letter  mbox
